--- a/quizApp/templates/datasets/settings_dataset.html
+++ b/quizApp/templates/datasets/settings_dataset.html
@@ -11,7 +11,7 @@
 {% block title %}Dataset {{ dataset.name }} - Settings{% endblock %}
 
 {% block content %}
-<div class="modal fade" id="preview-graph-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal fade" id="preview-media-item-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -21,9 +21,10 @@
         <div class="modal-body">
         </div>
         <div class="modal-footer">
-          <form id="delete-graph-form" method="delete">
+          <form id="delete-media-item-form" method="delete">
             <input type="submit" class="btn btn-danger"
-                                  id="delete-graph-button" value="Delete Graph">
+                                  id="delete-media-item-button" value="Delete
+                                  Media Item">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </form>
         </div>
@@ -39,31 +40,31 @@
 
 <hr>
 
-<h3>Graphs</h3>
+<h3>Media items</h3>
 <table class="table">
   <thead>
     <tr>
       <th>ID</th>
+      <th>Type</th>
       <th>Name</th>
-      <th>Filename</th>
       <th>Preview</th>
     </tr>
   </thead>
   <tbody>
-    {% for graph in dataset.graphs %}
+    {% for media_item in dataset.media_items %}
     <tr>
-      <td class="graph-id">{{ graph.id }}</td>
-      <td class="graph-name">graph
-        name</td>
-      <td class="graph-filename">{{ graph.filename }}</td>
+      <td class="media-item-id">{{ media_item.id }}</td>
+      <td class="media-item-type">{{ media_item.type }}</td>
+      <td class="media-item-name">{{ media_item.name }}</td>
       <td><a
           href="#" class="preview"
-                   data-read-url="{{ url_for('datasets.read_graph',
-                   dataset_id=dataset.id, graph_id=graph.id) }}"
+                   data-read-url="{{ url_for('datasets.read_media_item',
+                   dataset_id=dataset.id, media_item_id=media_item.id) }}"
                    data-toggle="modal"
-                   data-target="#preview-graph-modal"
-                   data-delete-url="{{ url_for('datasets.delete_dataset_graph',
-                   dataset_id=dataset.id, graph_id=graph.id) }}" >
+                   data-target="#preview-media-item-modal"
+                   data-delete-url="{{
+                   url_for('datasets.delete_dataset_media_item',
+                   dataset_id=dataset.id, media_item_id=media_item.id) }}" >
                    {{ macros.render_glyphicon("eye-open")}}
         </a>
       </td>
