--- a/quizApp/templates/datasets/settings_dataset.html
+++ b/quizApp/templates/datasets/settings_dataset.html
@@ -67,6 +67,10 @@
                    dataset_id=dataset.id, media_item_id=media_item.id) }}" >
                    {{ macros.render_glyphicon("eye-open")}}
         </a>
+          <a href="{{ url_for('datasets.settings_media_item',
+          dataset_id=dataset.id, media_item_id=media_item.id) }}">
+            {{ macros.render_glyphicon("cog") }}
+          </a>
       </td>
     </tr>
     {% endfor %}
@@ -76,7 +80,7 @@
 <h4>Create new...</h4>
 
 <form id="create-media-item-form" method="post" action="{{
-url_for('datasets.create_media_item', dataset_id=dataset.id) }}>
+url_for('datasets.create_media_item', dataset_id=dataset.id) }}">
   {{ macros.render_field(create_media_item_form.object_type) }}
   {{ macros.render_field(create_media_item_form.submit, class_="btn-success",
   value="Create") }}
