--- a/quizApp/templates/activities/read_question.html
+++ b/quizApp/templates/activities/read_question.html
@@ -14,9 +14,9 @@ Activity {{ question.id }} - Preview
   <h3>{{ question.question }}</h3>
   <form id="question-submit-form">
     {{ macros.render_field(question_form.choices) }}
-    {% if question.needs_reflection %}
+    {% if question.needs_comment %}
         <p>Why do you think this is the correct choice?</p>
-        {{ macros.render_field(question_form.reflection, rows="5") }}
+        {{ macros.render_field(question_form.comment, rows="5") }}
         <br />
     {% endif %}
     {{ macros.render_field(question_form.submit) }}
