--- a/quizApp/templates/experiments/read_question.html
+++ b/quizApp/templates/experiments/read_question.html
@@ -28,9 +28,9 @@ Quiz
   <form action="{{ url_for('experiments.update_assignment', exp_id=exp.id,
   a_id=assignment.id)}}" method="post" id="question-submit-form">
     {{ macros.render_field(mc_form.choices, disabled=experiment_complete) }}
-    {% if question.needs_reflection %}
+    {% if question.needs_comment %}
     <p>Why do you think this is the correct choice?</p>
-    {{ macros.render_field(mc_form.reflection, rows="5",
+    {{ macros.render_field(mc_form.comment, rows="5",
     disabled=experiment_complete) }}
     <br />
     {% endif %}
