--- a/quizApp/templates/experiments/read_question.html
+++ b/quizApp/templates/experiments/read_question.html
@@ -26,7 +26,7 @@ Quiz
 <div id='question'>
   <h3>{{ question.question }}</h3>
   <form action="{{ url_for('experiments.update_assignment', exp_id=exp.id,
-  a_id=assignment.id)}}" method="post" id="question-submit-form">
+  a_id=assignment.id)}}" method="patch" id="question-submit-form">
     {{ macros.render_field(mc_form.choices, disabled=experiment_complete) }}
     {% if question.needs_comment %}
     <p>Why do you think this is the correct choice?</p>
