Expanded activity tests

--- a/quizApp/templates/activities/settings_question.html
+++ b/quizApp/templates/activities/settings_question.html
@@ -42,7 +42,7 @@
 <h3>General</h3>
 
 <form action="{{ url_for('activities.update_activity', activity_id=question.id
-) }}" method="post" id="update-activity-form">
+) }}" method="put" id="update-activity-form">
   {{ macros.render_form(general_form) }}
 </form>
 
