--- a/quizApp/templates/datasets/settings_dataset.html
+++ b/quizApp/templates/datasets/settings_dataset.html
@@ -34,7 +34,7 @@
 <h3>General</h3>
 
 <form action="{{ url_for('datasets.update_dataset', dataset_id=dataset.id
-) }}" method="post" id="update-dataset-form">
+) }}" method="put" id="update-dataset-form">
   {{ macros.render_form(update_dataset_form) }}
 </form>
 
