even more tests

--- a/quizApp/templates/datasets/settings_graph.html
+++ b/quizApp/templates/datasets/settings_graph.html
@@ -17,7 +17,7 @@
 <h3>General</h3>
 
 <form action="{{ url_for('datasets.update_media_item',
-dataset_id=dataset.id, media_item_id=graph.id) }}" method="post" id="update-dataset-form">
+dataset_id=dataset.id, media_item_id=graph.id) }}" method="put" id="update-dataset-form">
   {{ macros.render_form(update_graph_form) }}
 </form>
 
