Removed some magic strings

--- a/quizApp/templates/experiments/experiment_macros.html
+++ b/quizApp/templates/experiments/experiment_macros.html
@@ -29,15 +29,15 @@
 {% macro experiment_row(exp, admin_controls) -%}
 <tr>
   <td class="name">
-    <a href="{{ url_for('experiments.read_experiment', exp_id=exp.id) }}">{{exp.name}}</a>
+    <a href="{{ url_for('experiments.read_experiment', experiment_id=exp.id) }}">{{exp.name}}</a>
   </td>
   <td class="start">{{exp.start|datetime_format}}</td>
   <td class="stop">{{exp.stop|datetime_format}}</td>
   <td>{% if admin_controls %}
-    <a href="{{ url_for('experiments.settings_experiment', exp_id=exp.id) }}">
+    <a href="{{ url_for('experiments.settings_experiment', experiment_id=exp.id) }}">
       {{ macros.render_glyphicon('cog') }}
     </a>
-    <a href="{{ url_for('experiments.results_experiment', exp_id=exp.id) }}">
+    <a href="{{ url_for('experiments.results_experiment', experiment_id=exp.id) }}">
       {{ macros.render_glyphicon('signal') }}
     </a>
     {% endif %}
