--- a/quizApp/templates/experiments/settings_experiment.html
+++ b/quizApp/templates/experiments/settings_experiment.html
@@ -15,7 +15,7 @@
 <h3>General settings</h2>
 
 <form action="{{ url_for('experiments.update_experiment',
-exp_id=experiment.id) }}" method="put" id="update-experiment-form">
+experiment_id=experiment.id) }}" method="put" id="update-experiment-form">
   {{ macros.render_field(update_experiment_form.name) }}
   {{ macros.render_field(update_experiment_form.start) }}
   {{ macros.render_field(update_experiment_form.stop) }}
@@ -31,7 +31,7 @@ exp_id=experiment.id) }}" method="put" id="update-experiment-form">
   {{ macros.render_glyphicon("exclamation-sign") }}
   Warning: this cannot be undone!
 </div>
-<form action="{{ url_for('experiments.delete_experiment', exp_id=experiment.id)
+<form action="{{ url_for('experiments.delete_experiment', experiment_id=experiment.id)
 }}" method="delete" id="experiment-delete-form">
   {{ macros.render_field(delete_experiment_form.submit, value="Delete",
   class_="btn-danger") }}
