--- a/quizApp/templates/experiments/confirm_done_experiment.html
+++ b/quizApp/templates/experiments/confirm_done_experiment.html
@@ -14,10 +14,10 @@ Confirm experiment submission
 <p>If you are ready to submit your answers, click the "Submit" button below.
 You will not be able to modify your answers after this.</p>
 
-<form action="{{ url_for('experiments.finalize_experiment', exp_id=experiment.id)
+<form action="{{ url_for('experiments.finalize_experiment', experiment_id=experiment.id)
 }}" method="patch" id="submit-experiment-form">
   <input type="submit" value="Submit" class="btn btn-primary">
-  <a href="{{ url_for('experiments.read_experiment', exp_id=experiment.id) }}"
+  <a href="{{ url_for('experiments.read_experiment', experiment_id=experiment.id) }}"
      class="btn btn-primary" role="button">Go back to start</a>
 </form>
 {% endblock %}
