--- a/quizApp/templates/experiments/read_experiment.html
+++ b/quizApp/templates/experiments/read_experiment.html
@@ -17,7 +17,7 @@
     {% if assignment %}
       <p>Press the start button to begin.</p>
 
-      <a href="{{ url_for('experiments.read_assignment', exp_id=experiment.id,
+      <a href="{{ url_for('experiments.read_assignment', experiment_id=experiment.id,
       a_id=assignment.id) }}" class="btn btn-primary">Start</a>
     {% else %}
       <p>You are done with this experiment.</p>
