--- a/quizApp/templates/experiments/read_question.html
+++ b/quizApp/templates/experiments/read_question.html
@@ -25,7 +25,7 @@ Quiz
 
 <div id='question'>
   <h3>{{ question.question }}</h3>
-  <form action="{{ url_for('experiments.update_assignment', exp_id=exp.id,
+  <form action="{{ url_for('experiments.update_assignment', experiment_id=exp.id,
   a_id=assignment.id)}}" method="patch" id="question-submit-form">
     {{ macros.render_field(mc_form.choices, disabled=experiment_complete) }}
     {% if question.needs_comment %}
@@ -38,7 +38,7 @@ Quiz
     <div class="row">
       <div class="previous-button">
         {% if previous_assignment %}
-        <a href="{{ url_for('experiments.read_assignment', exp_id=exp.id,
+        <a href="{{ url_for('experiments.read_assignment', experiment_id=exp.id,
         a_id=previous_assignment.id) }}" class="btn btn-primary"
                                          role="button">Previous</a>
         {% endif %}
