--- a/quizApp/templates/header.html
+++ b/quizApp/templates/header.html
@@ -40,6 +40,11 @@
               <a href="{{ url_for('datasets.read_datasets')
                 }}">Datasets</a>
             </li>
+            <li role="presentation">
+              <a href="{{ url_for('core.manage_data') }}">
+                Manage data
+              </a>
+            </li>
             {% endif %}
             {% else %}
             <li role="presentation" class="active">
