Link docs from manage page

--- a/quizApp/templates/core/manage_data.html
+++ b/quizApp/templates/core/manage_data.html
@@ -12,6 +12,7 @@ Manage data
 {% endblock %}
 
 {% block content %}
+<p>For help with importing and exporting, see <a href="http://quizapp.readthedocs.io/en/latest/import_export.html">the documentation.</a></p>
 <p><a href="{{ url_for('core.export_data') }}">Export data (xlsx)</a></p>
 <p><a href="{{ url_for('core.import_template') }}">Download import template
   (xlsx)</a></p>
