--- a/quizApp/templates/mturk/register.html
+++ b/quizApp/templates/mturk/register.html
@@ -6,7 +6,7 @@ Dataset List
 
 {% block content %}
 <p>Hello!</p>
-{% for key, value in request.data.iteritems() %}
+{% for key, value in request.args.iteritems() %}
 <p>{{ key }}: {{ value }}</p>
 {% endfor %}
-{% endlbock %}
+{% endblock %}
