--- a/quizApp/templates/core/index.html
+++ b/quizApp/templates/core/index.html
@@ -1,11 +1,11 @@
 {% extends 'header.html' %}
 {% block title %}
-Training and Quiz
+Home
 {% endblock %}
 
 {% block content %}
-<p>Login with the id you were assigned to begin.</p>
-<p>Then, continue to the <a href="{{ url_for('experiments.read_experiments') }}">
-  Experiments page.</a></p>
-<p><a href="{{ url_for('activities.read_activities') }}">Activities page</a></p>
+<p>Welcome to QuizApp!</p>
+{% if not current_user.is_authenticated %}
+<p>Log in with your credentials to access the site.</p>
+{% endif %}
 {% endblock %}
