--- a/quizApp/templates/mturk/register.html
+++ b/quizApp/templates/mturk/register.html
@@ -10,5 +10,9 @@ Dataset List
 <p>{{ experiment.blurb }}</p>
 {% for key, value in request.args.iteritems() %}
 <p>{{ key }}: {{ value }}</p>
+{% if current_user.is_authenticated %}
+<a role="button" class="btn btn-primary"
+href="{{ url_for("experiments.read_experiment", experiment_id=experiment.id) }}">Go to experiment</a>
+{% endif %}
 {% endfor %}
 {% endblock %}
