moved font rendering to CDN

--- a/quizApp/templates/header.html
+++ b/quizApp/templates/header.html
@@ -15,6 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>QuizApp - {% block title %}{% endblock %}</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway"
+          rel="stylesheet">
 
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
