Don't let parts start over on back disabled experiment

--- a/quizApp/templates/experiments/confirm_done_experiment.html
+++ b/quizApp/templates/experiments/confirm_done_experiment.html
@@ -17,7 +17,9 @@ You will not be able to modify your answers after this.</p>
 <form action="{{ url_for('experiments.finalize_experiment', experiment_id=experiment.id)
 }}" method="patch" id="submit-experiment-form">
   <input type="submit" value="Submit" class="btn btn-primary">
+  {% if not experiment.disable_previous %}
   <a href="{{ url_for('experiments.read_experiment', experiment_id=experiment.id) }}"
      class="btn btn-primary" role="button">Go back to start</a>
+  {% endif %}
 </form>
 {% endblock %}
