--- a/quizApp/templates/experiments/done_experiment.html
+++ b/quizApp/templates/experiments/done_experiment.html
@@ -1,4 +1,5 @@
 {% extends 'header.html' %}
+{% import "experiments/experiment_macros.html" as exp_macros %}
 
 {% block title %}
 Thank you for participating.</h3>
@@ -6,6 +7,43 @@ Thank you for participating.</h3>
 
 {% block content %}
 <p>You are now finished.</p>
-{{ addendum|safe }}
-{% endblock %}
 
+{% if addendum %}
+{{ addendum|safe }}
+{% endif %}
+
+<p>How you did:</p>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Assignment</th>
+      <th>Correct?</th>
+      <th>Feedback</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for assignment in participant_experiment.assignments %}
+    <tr class="{% if assignment.result.choice.correct %}
+    success
+    {% else%}
+    danger
+    {% endif %}">
+      <td><a href="{{ url_for('experiments.read_assignment',
+      experiment_id=participant_experiment.experiment.id,
+      a_id=assignment.id) }}">{{ assignment.id }}</a>
+      </td>
+      <td>
+        {% if assignment.result.choice.correct %}
+        {{ macros.render_glyphicon("ok") }}
+        {% else %}
+        {{ macros.render_glyphicon("remove") }}
+        {% endif %}
+      </td>
+      <td>{{ assignment.activity.explanation }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
+{% endblock %}
