--- a/quizApp/templates/experiments/settings_experiment.html
+++ b/quizApp/templates/experiments/settings_experiment.html
@@ -16,12 +16,7 @@
 
 <form action="{{ url_for('experiments.update_experiment',
 experiment_id=experiment.id) }}" method="put" id="update-experiment-form">
-  {{ macros.render_field(update_experiment_form.name) }}
-  {{ macros.render_field(update_experiment_form.start) }}
-  {{ macros.render_field(update_experiment_form.stop) }}
-  {{ macros.render_field(update_experiment_form.blurb) }}
-  {{ macros.render_field(update_experiment_form.submit, value="Save",
-  class_="btn-success") }}
+  {{ macros.render_form(update_experiment_form) }}
 </form>
 
 <hr>
