Fixed typo in template

--- a/quizApp/templates/experiments/done_experiment.html
+++ b/quizApp/templates/experiments/done_experiment.html
@@ -23,7 +23,7 @@ Thank you for participating.</h3>
   <thead>
     <tr>
       <th>Assignment</th>
-      {% if scorecard_settings.display_correct %}
+      {% if scorecard_settings.display_correctness %}
       <th>Correct?</th>
       {% endif %}
       {% if scorecard_settings.display_score %}
@@ -38,7 +38,7 @@ Thank you for participating.</h3>
     {% for assignment in participant_experiment.assignments %}
     {% if assignment.result %}
     <tr
-       {% if scorecard_settings.display_correct %}
+       {% if scorecard_settings.display_correctness %}
          class="{% if assignment.result.choice.correct %}
          success
          {% else%}
